test/org/midica/testfiles/failing/call-function-without-name.midica
INCLUDE inc/instruments.midica

CALL () m
